<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/grey_light"
	android:gravity="center_horizontal"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		android:theme="@style/ToolbarTheme"
		app:navigationIcon="@drawable/ic_menu"/>

	<View
		android:id="@+id/shadow"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/grey"/>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:src="@drawable/img_mirtech"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:gravity="center"
		android:divider="@drawable/divider_horizontal"
		android:showDividers="middle"
		android:orientation="vertical">

		<TextView
			android:id="@+id/contact_twitter"
			style="@style/ContactItem"
			android:drawableLeft="@drawable/selector_twitter_btn"
			android:text="@string/follow_us"/>

		<TextView
			android:id="@+id/contact_facebook"
			style="@style/ContactItem"
			android:drawableLeft="@drawable/selector_facebook_btn"
			android:text="@string/like_us"/>

		<TextView
			android:id="@+id/contact_youtube"
			style="@style/ContactItem"
			android:drawableLeft="@drawable/selector_youtube_btn"
			android:text="@string/visit_us"/>

		<TextView
			android:id="@+id/contact_gmail"
			style="@style/ContactItem"
			android:drawableLeft="@drawable/selector_gmail_btn"
			android:text="@string/write_us"/>

	</LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="bottom|center"
		android:layout_marginBottom="40dp"
		android:textSize="12sp"
		android:text="@string/copyright"/>

</LinearLayout>
